--- a/exercises/exercise004layout.fxml
+++ b/exercises/exercise004layout.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -11,7 +12,7 @@
       <Label layoutX="11.0" layoutY="12.0" text="Username" />
       <Label layoutX="12.0" layoutY="64.0" text="Password" />
       <TextField fx:id="usernameField" layoutX="11.0" layoutY="31.0" prefHeight="25.0" prefWidth="204.0" />
-      <TextField fx:id="passwordField" layoutX="11.0" layoutY="83.0" prefHeight="25.0" prefWidth="204.0" />
-      <Button fx:id="registerButton" layoutX="144.0" layoutY="119.0" mnemonicParsing="false" text="Register" />
+      <PasswordField fx:id="passwordField" layoutX="11.0" layoutY="83.0" prefHeight="25.0" prefWidth="204.0" />
+      <Button fx:id="registerButton" layoutX="144.0" layoutY="119.0" mnemonicParsing="false" onAction="#createAccount" text="Register" />
    </children>
 </AnchorPane>
